--- a/style.css
+++ b/style.css
@@ -1,1 +1,53 @@
-*
+*{
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+
+body{
+	width: 100%;
+	height: 100vh;
+	border: 2px solid red;
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+}
+
+form{
+	width: 400px;
+	border-radius: 0.5em;
+	box-shadow: 5px 30px 28px #808080;
+}
+
+form .body-form{
+	padding: 15px;
+}
+
+form .champ{
+	width: 300px;
+	padding: 12px;
+	margin: 5px;
+	background-color: #f2f2f2;
+	border: 0px;
+	border-radius: 0.4em;
+	text-align: center;
+}
+
+form .bouton{
+	width: 150px;
+	padding: 12px;
+	margin: 5px;
+	border: 0px;
+	border-radius: 0.4em;
+	background-color: #4ddbff;
+	color: white;
+}
+
+form .footer-form{
+	padding: 10px;
+	margin-top: 20px;
+	background-color: #f2f2f2;
+	border-top: 2px solid lightgrey;
+	opacity: 0.5;
+}
