--- a/style.css
+++ b/style.css
@@ -7,24 +7,24 @@
 body{
 	width: 100%;
 	height: 100vh;
-	border: 2px solid red;
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
 	align-items: center;
 }
 
-form{
+/*login.html*/
+#loginForm{
 	width: 400px;
 	border-radius: 0.5em;
 	box-shadow: 5px 30px 28px #808080;
 }
 
-form .body-form{
+#loginForm .body-form{
 	padding: 15px;
 }
 
-form .champ{
+#loginForm .champ{
 	width: 300px;
 	padding: 12px;
 	margin: 5px;
@@ -34,7 +34,7 @@ form .champ{
 	text-align: center;
 }
 
-form .bouton{
+#loginForm .bouton{
 	width: 150px;
 	padding: 12px;
 	margin: 5px;
@@ -44,10 +44,100 @@ form .bouton{
 	color: white;
 }
 
-form .footer-form{
+#loginForm .footer-form{
 	padding: 10px;
 	margin-top: 20px;
 	background-color: #f2f2f2;
 	border-top: 2px solid lightgrey;
 	opacity: 0.5;
 }
+
+/*todo.html*/
+#conteneur{
+	width: 90%;
+	height: 90vh;	
+	border: 2px solid yellow;
+	position: relative;
+}
+
+#conteneur .bgcolor{
+	height: 25vh;
+	background-color: #4ddbff;
+}
+
+#conteneur .add{
+	width: 60%;
+	padding: 8px;
+	position: absolute;
+	top:20vh;
+	left: 20%;
+	box-shadow: 5px 10px 10px #808080;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+}
+
+#conteneur .add p{
+	font-weight: bold;
+	margin-bottom: 10px;
+}
+
+#conteneur .todo{
+	width: 60%;
+	position: absolute;
+	top:40vh;
+	left: 20%;
+	box-shadow: 5px 10px 10px #808080;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+}
+
+.input1{
+	width: 80%;
+}
+
+.input2{
+	width: 70%;
+}
+
+.bouton{
+	width: 100px;
+	height: 35px;
+	color: white;
+	background-color: #4ddbff;
+	border: 1px solid #4ddbff;
+	border-radius: 5px; 
+}
+
+.save{
+	width: 100px;
+	height: 35px;
+	color: #4ddbff;
+	background-color: white;
+	border: 1px solid #4ddbff;
+	border-radius: 5px; 
+}
+
+#conteneur .todo .item{
+	padding: 8px;
+	border: 1px solid #4d4d4d;
+}
+
+#conteneur .todo .float{
+	float: right;
+	color: #4ddbff;
+}
+/*#conteneur #cadre{
+	width: 60%;
+	border: 2px solid yellow;
+}
+
+#conteneur .box{
+	margin: 30px;
+	padding: 5%;
+}
+
+#conteneur .add,#conteneur .list{
+	border: 2px solid green;
+}*/
